# Berrio

./: .env.production.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml
backend/: .env.example  .env.local.example  .env.prod.example  Dockerfile  Dockerfile.production  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_users.py  0002_auth.py  0003_receipts.py  0004_categories.py  0005_financial_scores.py  0006_banks.py  0007_families.py  0008_products_ai.py  0009_goals_budgets.py  0010_notifications.py  0011_reconciliation.py  0012_dashboard_prefs.py  0013_family_invites.py  0014_beta_hardening.py  0015_receipt_recognition.py  0016_helper_upgrade.py
backend/app/: __init__.py  main.py
backend/requirements/: base.txt  dev.txt  production.txt
backend/scripts/: backup_postgres.sh  entrypoint.prod.sh  entrypoint.sh  export_beta_fixtures.py  restore_postgres.sh  seed_demo.py
backend/tests/: conftest.py  helpers_receipts.py  test_ai.py  test_ai_feedback.py  test_analytics.py  test_auth.py  test_banks.py  test_categorization.py  test_dashboard.py  test_data_quality.py  test_families.py  test_family_invites.py  test_family_permissions.py  test_fns_client.py  test_goals_budgets.py  test_hardening.py  test_jwt_key_length.py  test_line_item_normalizer.py  test_local_beta.py  test_notifications.py  test_ofd_validation.py  test_receipt_recognition.py  test_receipts.py  test_reconciliation.py  test_statement_parsers.py
(+225 files in other folders)
