[project]
name = "berrio-backend"
version = "0.1.0"
requires-python = ">=3.12"
description = "Berrio FastAPI backend"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear (subset via ignores)
]
ignore = [
  "E501",  # line length — black handles wrapping where practical
  "B008",  # Depends() in defaults is FastAPI idiom
  "B904",  # raise from — gradual
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
  alembic/versions
)/
'''

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
disallow_untyped_defs = false
pretty = true
packages = ["app"]
exclude = [
  "alembic/versions/",
  "scripts/",
  "tests/",
]

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "argon2.*",
  "passlib.*",
]
ignore_missing_imports = true
